xxx.log
/usr/bin/gcc -o obj/input.o -c -Wall -g --std=c99 ./src/input.c
./src/input.c: In function ‘linear_counter’:
./src/input.c:57:3: warning: passing argument 4 of ‘write_txt_2array’ from incompatible pointer type [enabled by default]
   write_txt_2array(data_i,number,arr_length,input);
   ^
In file included from ./src/input.c:14:0:
./src/../include/write_txt.h:4:6: note: expected ‘const unsigned char **’ but argument is of type ‘unsigned char **’
 void write_txt_2array(FILE *dst, int number, int length, const uchar **array);
      ^
./src/input.c: In function ‘all_0’:
./src/input.c:79:3: warning: passing argument 4 of ‘write_txt_2array’ from incompatible pointer type [enabled by default]
   write_txt_2array(data_i,number,arr_length,input);
   ^
In file included from ./src/input.c:14:0:
./src/../include/write_txt.h:4:6: note: expected ‘const unsigned char **’ but argument is of type ‘unsigned char **’
 void write_txt_2array(FILE *dst, int number, int length, const uchar **array);
      ^
./src/input.c: In function ‘all_1’:
./src/input.c:99:3: warning: passing argument 4 of ‘write_txt_2array’ from incompatible pointer type [enabled by default]
   write_txt_2array(data_i,number,arr_length,input);
   ^
In file included from ./src/input.c:14:0:
./src/../include/write_txt.h:4:6: note: expected ‘const unsigned char **’ but argument is of type ‘unsigned char **’
 void write_txt_2array(FILE *dst, int number, int length, const uchar **array);
      ^
./src/input.c: In function ‘random_repeat_long’:
./src/input.c:121:3: warning: passing argument 4 of ‘write_txt_2array’ from incompatible pointer type [enabled by default]
   write_txt_2array(data_i,number,arr_length,input);
   ^
In file included from ./src/input.c:14:0:
./src/../include/write_txt.h:4:6: note: expected ‘const unsigned char **’ but argument is of type ‘unsigned char **’
 void write_txt_2array(FILE *dst, int number, int length, const uchar **array);
      ^
./src/input.c: In function ‘random_input’:
./src/input.c:141:3: warning: passing argument 4 of ‘write_txt_2array’ from incompatible pointer type [enabled by default]
   write_txt_2array(data_i,number,arr_length,input);
   ^
In file included from ./src/input.c:14:0:
./src/../include/write_txt.h:4:6: note: expected ‘const unsigned char **’ but argument is of type ‘unsigned char **’
 void write_txt_2array(FILE *dst, int number, int length, const uchar **array);
      ^
./src/input.c: In function ‘counter_normal’:
./src/input.c:169:29: error: lvalue required as left operand of assignment
  arr_length > 4 ? n = 4 : n = arr_length;
                             ^
./src/input.c:176:3: warning: passing argument 4 of ‘write_txt_2array’ from incompatible pointer type [enabled by default]
   write_txt_2array(data_i,number,arr_length,input);
   ^
In file included from ./src/input.c:14:0:
./src/../include/write_txt.h:4:6: note: expected ‘const unsigned char **’ but argument is of type ‘unsigned char **’
 void write_txt_2array(FILE *dst, int number, int length, const uchar **array);
      ^
./src/input.c: In function ‘random_repeat_short’:
./src/input.c:188:15: warning: initialization from incompatible pointer type [enabled by default]
  uchar *out_p=input;
               ^
./src/input.c:203:3: warning: passing argument 4 of ‘write_txt_2array’ from incompatible pointer type [enabled by default]
   write_txt_2array(data_i,BLK_NUMBER,BLK_LENGTH,input);
   ^
In file included from ./src/input.c:14:0:
./src/../include/write_txt.h:4:6: note: expected ‘const unsigned char **’ but argument is of type ‘unsigned char **’
 void write_txt_2array(FILE *dst, int number, int length, const uchar **array);
      ^
./src/input.c: In function ‘balance_counter’:
./src/input.c:238:3: warning: passing argument 4 of ‘write_txt_2array’ from incompatible pointer type [enabled by default]
   write_txt_2array(data_i,BLK_NUMBER,BLK_LENGTH,input);
   ^
In file included from ./src/input.c:14:0:
./src/../include/write_txt.h:4:6: note: expected ‘const unsigned char **’ but argument is of type ‘unsigned char **’
 void write_txt_2array(FILE *dst, int number, int length, const uchar **array);
      ^
./src/input.c: In function ‘count’:
./src/input.c:292:3: warning: passing argument 4 of ‘write_txt_2array’ from incompatible pointer type [enabled by default]
   write_txt_2array(data_i,BLK_NUMBER,BLK_LENGTH,input);
   ^
In file included from ./src/input.c:14:0:
./src/../include/write_txt.h:4:6: note: expected ‘const unsigned char **’ but argument is of type ‘unsigned char **’
 void write_txt_2array(FILE *dst, int number, int length, const uchar **array);
      ^
./src/input.c:252:9: warning: variable ‘start’ set but not used [-Wunused-but-set-variable]
     int start[BLK_NUMBER];
         ^
./src/input.c: In function ‘complex_count’:
./src/input.c:357:3: warning: passing argument 4 of ‘write_txt_2array’ from incompatible pointer type [enabled by default]
   write_txt_2array(data_i,BLK_NUMBER,BLK_LENGTH,input);
   ^
In file included from ./src/input.c:14:0:
./src/../include/write_txt.h:4:6: note: expected ‘const unsigned char **’ but argument is of type ‘unsigned char **’
 void write_txt_2array(FILE *dst, int number, int length, const uchar **array);
      ^
./src/input.c: In function ‘equal_input’:
./src/input.c:390:3: warning: passing argument 4 of ‘write_txt_2array’ from incompatible pointer type [enabled by default]
   write_txt_2array(data_i,BLK_NUMBER,BLK_LENGTH,input);
   ^
In file included from ./src/input.c:14:0:
./src/../include/write_txt.h:4:6: note: expected ‘const unsigned char **’ but argument is of type ‘unsigned char **’
 void write_txt_2array(FILE *dst, int number, int length, const uchar **array);
      ^
./src/input.c: In function ‘perodic_input’:
./src/input.c:441:3: warning: passing argument 4 of ‘write_txt_2array’ from incompatible pointer type [enabled by default]
   write_txt_2array(data_i,BLK_NUMBER,BLK_LENGTH,input);
   ^
In file included from ./src/input.c:14:0:
./src/../include/write_txt.h:4:6: note: expected ‘const unsigned char **’ but argument is of type ‘unsigned char **’
 void write_txt_2array(FILE *dst, int number, int length, const uchar **array);
      ^
make: *** [obj/input.o] Error 1
